Inicialización SGA (arquitectura en capas)

--- a/SGA.Api/appsettings.json
+++ b/SGA.Api/appsettings.json
@@ -1,5 +1,12 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=SGA;Trusted_Connection=True;TrustServerCertificate=True"
-  }
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
