--- a/SGA.Api/appsettings.json
+++ b/SGA.Api/appsettings.json
@@ -1,12 +1,14 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=SGA_Biblioteca;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=SGA_Biblioteca;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*"
 }
