--- a/SGA.Web/appsettings.json
+++ b/SGA.Web/appsettings.json
@@ -1,13 +1,12 @@
 {
+  "ApiSettings": {
+    "BaseUrl": "https://localhost:7149"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-
-  "ApiSettings": {
-    "BaseUrl": "https://localhost:7149"
-  }
+  "AllowedHosts": "*"
 }
